# brainfuck_chess

./: .dockerignore  .gitignore  AGENT.md  CONTEXT.md  Cargo.toml  Dockerfile  README.md  cloudbuild.yaml  reinstall-image.sh
chess play/: project.json
chess play/decoded-svg/: manifest.csv  manifest.json
docx/: ADDING_VARIANT_PIECES.md  CHESSEMBLY.md  CONTEXT.md
engine/: Cargo.toml
engine/src/: attack_map.rs  endgame.rs  legal_moves.rs  lib.rs  placement.rs  profiling.rs  rules.rs  types.rs
engine/src/ai/: evaluate.rs  mod.rs  move_ordering.rs  search.rs  types.rs
engine/src/chessembly/: ast.rs  interpreter.rs  mod.rs  parser.rs
engine/src/pieces/: default_pieces.rs  mod.rs
engine/tests/: ai.rs  chessembly_compat.rs  rule_engine.rs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  config.ts  pieceAssets.ts
frontend/src/api/: gameApi.ts
frontend/src/components/: Board.vue  GameScreen.vue
frontend/src/types/: game.ts
server/: Cargo.toml  Dockerfile
server/src/: main.rs
