[package]
name = "brainfuck-chess-server"
version = "0.1.0"
edition = "2021"

[dependencies]
brainfuck-chess-engine = { path = "../engine" }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
uuid = { version = "1", features = ["v4"] }
dashmap = "6"
